--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,13 @@
                    <groupId>com.lazerycode.jmeter</groupId>
                 <artifactId>jmeter-maven-plugin</artifactId>
                 <version>2.0.3</version>
+  		<executions>
+                        <execution>
+                            <id>jmeter-tests</id>
+                            <goals>
+                                <goal>jmeter</goal>
+                            </goals>
+                        </execution>
                 </plugin>
            
         </plugins>
