--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,7 @@
                                 <goal>jmeter</goal>
                             </goals>
                         </execution>
+		</executions>
                 </plugin>
            
         </plugins>
