--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <perfana.applicationRelease>1.0</perfana.applicationRelease>
 
         <!-- influxdb server -->
-        <test.influxdb.url>http://localhost:8086</test.influxdb.url>
+        <test.influxdb.url>http://49.27.22.156:8086</test.influxdb.url>
 
         <!-- By default Jenkins build Url is used -->
         <perfana.buildResultsUrl>${BUILD_URL}</perfana.buildResultsUrl>
@@ -42,7 +42,7 @@
 				<version>1.0.1</version>
                 <configuration>
                     <perfanaEnabled>true</perfanaEnabled>
-                    <perfanaUrl>http://localhost:4000</perfanaUrl>
+                    <perfanaUrl>http://49.27.22.156:4000</perfanaUrl>
                     <perfanaAssertResultsEnabled>true</perfanaAssertResultsEnabled>
                     <perfanaApplication>${perfana.application}</perfanaApplication>
                     <perfanaTestEnvironment>Delta</perfanaTestEnvironment>
